# Accessibility_testing_AI

./: .gitignore  CHECKLIST_WIZARD_UX_IMPROVEMENTS.md  CONTRAST_FIXES.md  INTEGRATION_GUIDE.md  INTEGRATION_OPTIONS.md  INTEGRATION_STRATEGY.md  QUICK_START_INTEGRATION.md  README.md  RULE_DATABASE_COMPLETE.md  fix_priorities.py  package.json  pyproject.toml  requirements.txt
api_app/: main.py
backend/: main.py  schemas.py
backend/api/: __init__.py
backend/api/routes/: manual_testing.py  scans.py
backend/services/: analyze.py  db.py
docs/: ASYNC_VISUAL_GUIDE.md  CACHE_EXPIRATION_AND_SECURITY.md  PA11Y_INTEGRATION.md  RATE_LIMITING_AND_RETRY.md  RATE_LIMITING_VISUAL_GUIDE.md  TOKEN_COUNTING_AND_ASYNC.md
examples/: sample_example.json  test_basic.py
examples/test_reports/: Reportt.json  axe-designer-colors.json  axe-example.json  axeReport.json
frontend/: index.html  package.json  tailwind.config.js  tsconfig.node.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AIStatsSection.tsx  AppShell.tsx  AppSidebar.tsx  ChecklistWizard.tsx  EmptyState.tsx  IssueCard.tsx  KeyboardShortcuts.tsx  TestRecorder.tsx  ThemeShowcase.tsx  TopBar.tsx
frontend/src/lib/: api.ts  queryClient.ts
frontend/src/pages/: DashboardNew.tsx  HomeNew.tsx  HomePage.tsx  Pipeline.tsx  (+9 more)
integration-examples/: README.md  a11y-dashboard-client.ts  a11y_dashboard_client.py  cli-integration.sh  jenkins-integration.groovy  pipeline-integration.yml
src/accessibility_ai/: __init__.py  analyzer.py  cli.py  models.py  pattern_detector.py  prioritizer.py  simple_ai.py
(+25 files in other folders)
